if(MSVC)
  configure_file(assets/atlas.png Debug/assets/atlas.png COPYONLY)
  configure_file(assets/font.png Debug/assets/font.png COPYONLY)
  configure_file(shaders/batch.vert Debug/shaders/batch.vert COPYONLY)
  configure_file(shaders/batch.frag Debug/shaders/batch.frag COPYONLY)
  configure_file(shaders/light.vert Debug/shaders/light.vert COPYONLY)
  configure_file(shaders/light.frag Debug/shaders/light.frag COPYONLY)
  configure_file(assets/pipes.png Debug/assets/pipes.png COPYONLY)
  configure_file(assets/pipes.txt Debug/assets/pipes.txt COPYONLY)
  configure_file(assets/greenGoblin.png Debug/assets/greenGoblin.png COPYONLY)
  configure_file(assets/greenGoblin.txt Debug/assets/greenGoblin.txt COPYONLY)

  configure_file(assets/atlas.png Release/assets/atlas.png COPYONLY)
  configure_file(assets/font.png Release/assets/font.png COPYONLY)
  configure_file(shaders/batch.vert Release/shaders/batch.vert COPYONLY)
  configure_file(shaders/batch.frag Release/shaders/batch.frag COPYONLY)
  configure_file(shaders/light.vert Release/shaders/light.vert COPYONLY)
  configure_file(shaders/light.frag Release/shaders/light.frag COPYONLY)
  configure_file(assets/pipes.png Release/assets/pipes.png COPYONLY)
  configure_file(assets/pipes.txt Release/assets/pipes.txt COPYONLY)
  configure_file(assets/greenGoblin.png Release/assets/greenGoblin.png COPYONLY)
  configure_file(assets/greenGoblin.txt Release/assets/greenGoblin.txt COPYONLY)
else()
  configure_file(assets/atlas.png assets/atlas.png COPYONLY)
  configure_file(assets/font.png assets/font.png COPYONLY)
  configure_file(shaders/batch.vert shaders/batch.vert COPYONLY)
  configure_file(shaders/batch.frag shaders/batch.frag COPYONLY)
  configure_file(shaders/light.vert shaders/light.vert COPYONLY)
  configure_file(shaders/light.frag shaders/light.frag COPYONLY)
  configure_file(assets/pipes.png assets/pipes.png COPYONLY)
  configure_file(assets/pipes.txt assets/pipes.txt COPYONLY)
  configure_file(assets/greenGoblin.png assets/greenGoblin.png COPYONLY)
  configure_file(assets/greenGoblin.txt assets/greenGoblin.txt COPYONLY)
endif()

project(Mindless)
add_executable(Mindless src/mindless.cpp)
target_link_libraries(Mindless MindlessEngine)

project(Terrain)
add_executable(Terrain src/terrain.cpp)
target_link_libraries(Terrain MindlessEngine)